Continuation of the UI and starting on the Notifications
Now contains settings and basic notifications

--- a/CodeAnchorTest/.gitignore
+++ b/CodeAnchorTest/.gitignore
@@ -1,7 +1,12 @@
+*.iml
+*.ipr
+*.iws
+.idea/
+
 .gradle
+
+*.class
+
 /local.properties
-/.idea/workspace.xml
-/.idea/libraries
 .DS_Store
 /build
-settings.gradle
