--- a/CodeAnchorTest/app/src/main/AndroidManifest.xml
+++ b/CodeAnchorTest/app/src/main/AndroidManifest.xml
@@ -11,14 +11,13 @@
         android:icon="@drawable/ic_launcher"
         android:label="@string/app_name"
         android:theme="@style/AppTheme" >
-
         <service
             android:name="com.estimote.sdk.service.BeaconService"
             android:exported="false" />
 
         <activity
             android:name=".MainActivity"
-            android:label="@string/title_activity_main" >
+            android:label="CodeAnchor" >
             <intent-filter>
                 <action android:name="android.intent.action.MAIN" />
 
