--- a/CodeAnchorAndroid/app/src/main/AndroidManifest.xml
+++ b/CodeAnchorAndroid/app/src/main/AndroidManifest.xml
@@ -14,7 +14,7 @@
         android:theme="@style/AppTheme" >
         <activity
             android:name=".CodeAnchorActivity"
-            android:label="CodeAnchor" >
+            android:label="NIBS" >
             <intent-filter>
                 <action android:name="android.intent.action.MAIN" />
 
@@ -23,7 +23,7 @@
         </activity>
 
         <service
-            android:name=".BeaconManagerService"
+            android:name=".beacon.BeaconManagerService"
             android:enabled="true"
             android:exported="true" >
         </service>
